--- a/styles/prosilver/template/event/overall_header_head_append.html
+++ b/styles/prosilver/template/event/overall_header_head_append.html
@@ -1,1 +1,4 @@
-<!-- IF S_FORM_MAKER --><!-- INCLUDECSS @dmzx_formcreator/formcreator.css --><!-- ENDIF -->
+<!-- IF S_FORM_MAKER -->
+<!-- INCLUDECSS @dmzx_formcreator/formcreator_buttons.css -->
+<!-- ENDIF -->
+<!-- INCLUDECSS @dmzx_formcreator/formcreator.css -->
