--- a/styles/prosilver/template/event/posting_editor_message_after.html
+++ b/styles/prosilver/template/event/posting_editor_message_after.html
@@ -1,4 +1,4 @@
-<!-- IF not S_SHOW_DRAFTS and not $SIG_EDIT eq 1 -->
+<!-- IF not S_SHOW_DRAFTS and not $SIG_EDIT eq 1 and S_FORM_MAKER -->
 <div id="form_hide" class="panels">
 	<div class="inner">
 		<fieldset class="submit-buttons">
