--- a/styles/prosilver/template/event/posting_editor_buttons_after.html
+++ b/styles/prosilver/template/event/posting_editor_buttons_after.html
@@ -1,1 +1,1 @@
-<!-- IF MODE == 'edit' --><div class="form_help">{L_FORM_HELP_1}</div><!-- ENDIF -->
+{% if MODE == 'edit' %}<div class="form_help">{{ lang('FORM_HELP_1') }}</div>{% endif %}
