--- a/styles/prosilver/template/forms/form_maker.html
+++ b/styles/prosilver/template/forms/form_maker.html
@@ -7,7 +7,7 @@ function postform_check()
 {
 	if (document.forms.postform.subject.value == '')
 	{
-		alert('{LA_SUBJECT_REQUIRED}');
+		alert('{{ lang('SUBJECT_REQUIRED')|escape('js') }}');
 		document.forms.postform.subject.focus();
 		return(false);
 	}
@@ -16,27 +16,27 @@ function postform_check()
 // ]]>
 </script>
 
-<!-- IF MODE == 'post' -->
+{% if MODE == 'post' %}
 <div id="thisform" style="display:none; width:auto; margin-left:auto; margin-right:auto;" class="panels">
 	<div class="inner">
-		<div class="mand"><span class="mandatory">*</span> {L_MANDATORY}</div>
+		<div class="mand"><span class="mandatory">*</span> {{ lang('MANDATORY') }}</div>
 		<fieldset class="fields2">
-			<!-- BEGIN form_apptemplate -->
+			{% for form_apptemplate in loops.form_apptemplate %}
 			<dl>
-				<dt><label for="templatefield_{form_apptemplate.NAME}">{form_apptemplate.NAME}{L_COLON}</label>{form_apptemplate.MANDATORY}</dt>
-				<dd>{form_apptemplate.TYPE}</dd>
+				<dt><label for="templatefield_{{ form_apptemplate.NAME }}">{{ form_apptemplate.NAME }}{{ lang('COLON') }}</label>{{ form_apptemplate.MANDATORY }}</dt>
+				<dd>{{ form_apptemplate.TYPE }}</dd>
 			</dl>
-			<!-- END form_apptemplate -->
+			{% endfor %}
 		</fieldset>
-		<div class="form_chk_msg">{L_CHECKBOX_MSG}</div>
+		<div class="form_chk_msg">{{ lang('CHECKBOX_MSG') }}</div>
 	</div>
 	<div class="panels">
 		<div class="inner">
 			<fieldset class="submit-buttons">
-				<input type="submit" accesskey="s" tabindex="6" name="post" value="{L_SUBMIT}" class="button1 default-submit-action" onclick="return postform_check();" />&nbsp;
-				<input type="reset" name="reset" value="{L_RESET}" class="button2" />
-				{S_FORM_TOKEN}
-				<input type="button" class="button2" accesskey="f" name="useform" value="{L_CLOSE_FORM}" style="font-weight:normal; width: 50px" onclick="toggle_validation();ShowHide('thisform','message-box');ShowHide('smiley-box');ShowHide('form_hide','format-postingbuttons');" title="{L_CLOSE_FORM_EXPLAIN}" />
+				<input type="submit" accesskey="s" tabindex="6" name="post" value="{{ lang('SUBMIT') }}" class="button1 default-submit-action" onclick="return postform_check();" />&nbsp;
+				<input type="reset" name="reset" value="{{ lang('RESET') }}" class="button2" />
+				{{ S_FORM_TOKEN }}
+				<input type="button" class="button2" accesskey="f" name="useform" value="{{ lang('CLOSE_FORM') }}" style="font-weight:normal; width: 50px" onclick="toggle_validation();ShowHide('thisform','message-box');ShowHide('smiley-box');ShowHide('form_hide','format-postingbuttons');" title="{{ lang('CLOSE_FORM_EXPLAIN') }}" />
 			</fieldset>
 		</div>
 	</div>
@@ -70,4 +70,4 @@ function toggle_validation()
 }
 // ]]>
 </script>
-<!-- ENDIF -->
+{% endif %}
